[package]
name = "acid4sigmas"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
actix-web = "4.9.0"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.50"
reqwest = { version = "0.12.12", features = ["json"] }
actix-cors = "0.7.0"
acid4sigmas-new-models = { path = "../acid4sigmas-models" }
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
lazy_static = "1.5.0"
async-trait = "0.1.85"
anyhow = "1.0.95"
actix-web-lab = "0.22.0"
uuid = { version = "1.12.1", features = ["v4"] }
